--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,8 @@
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
+# Declare the orbs that we'll use in our config.
+# read more about orbs: https://circleci.com/docs/2.0/orb-intro/
 orbs:
   ruby: circleci/ruby@1.1.0
 
@@ -16,40 +18,47 @@ jobs:
         auth:
             username: mydockerhub-user
             password: $DOCKERHUB_PASSWORD
-      # CircleCI PostgreSQL images available at: https://circleci.com/developer/images/image/cimg/postgres
+    steps:
+      - checkout # pull down our git code.
+      - ruby/install-deps # use the ruby orb to install dependencies
+
+  test:
+    docker:
+      - image: cimg/ruby:2.7.4
+        auth:
+            username: mydockerhub-user
+            password: $DOCKERHUB_PASSWORD
       - image: cimg/postgres:14.4
-          auth:
+        auth:
             username: mydockerhub-user
             password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
-          environment:
+        environment:
             POSTGRES_USER: officer_arrest_tracker
             POSTGRES_DB: officer_arrest_tracker_test
-            POSTGRES_PASSWORD:
+            POSTGRES_PASSWORD: ""
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     environment:
-      BUNDLE_JOBS: "3"
-      BUNDLE_RETRY: "3"
-      PGHOST: 127.0.0.1
-      PGUSER: officer_arrest_tracker
-      PGPASSWORD: ""
-      RAILS_ENV: test
-
+        BUNDLE_JOBS: "3"
+        BUNDLE_RETRY: "3"
+        PGHOST: 127.0.0.1
+        PGUSER: officer_arrest_tracker
+        PGPASSWORD: ""
+        RAILS_ENV: test
+        
     steps:
-      - checkout
-      - ruby/install-deps
-      - node/install-packages:
-          pkg-manager: yarn
-          cache-key: "yarn.lock"
-      - run:
-          name: Wait for DB
-          command: dockerize -wait tcp://localhost:5432 -timeout 1m
-      - run:
-          name: Database setup
-          command: bundle exec rails db:schema:load --trace
-      # Run rspec in parallel
-      - ruby/rspec-test
-      - ruby/rubocop-check
+        - checkout
+        - ruby/install-deps
+        - run:
+            name: Wait for DB
+            command: dockerize -wait tcp://localhost:5432 -timeout 1m
+        - run:
+            name: Database setup
+            command: bundle exec rails db:schema:load --trace
+        # Run rspec in parallel
+        - ruby/rspec-test
+        - ruby/rubocop-check
+
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
