--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      - image: cimg/ruby:2.7.4
+      - image: cimg/ruby:2.7.4-node
         auth:
             username: mydockerhub-user
             password: $DOCKERHUB_PASSWORD
@@ -24,7 +24,7 @@ jobs:
 
   test:
     docker:
-      - image: cimg/ruby:2.7.4
+      - image: cimg/ruby:2.7.4-node
         auth:
             username: mydockerhub-user
             password: $DOCKERHUB_PASSWORD
