--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,9 +22,9 @@ jobs:
     steps:
       - checkout # pull down our git code.
       - ruby/install-deps # use the ruby orb to install dependencies
-      - node/install-packages:
-          cache-key: yarn.lock
-          pkg-manager: yarn
+      # - node/install-packages:
+      #     cache-key: yarn.lock
+      #     pkg-manager: yarn
 
   test:
     docker:
@@ -53,9 +53,9 @@ jobs:
     steps:
         - checkout
         - ruby/install-deps
-        - node/install-packages:
-            cache-key: yarn.lock
-            pkg-manager: yarn
+        # - node/install-packages:
+        #     cache-key: yarn.lock
+        #     pkg-manager: yarn
         - run:
             name: Wait for DB
             command: dockerize -wait tcp://localhost:5432 -timeout 1m
